@@ -5,6 +5,7 @@ import com.language.learning.config.auth.JwtTokenHelper;
 import com.language.learning.config.auth.RestAuthenticationEntryPoint;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -42,6 +43,9 @@ public class WebSecurityConfiguration {
 
     private final LogoutHandler logoutHandler;
 
+    @Value("${external.react.frontend.app.url}")
+    private String corsUrl;
+
     @Bean
     public static PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
@@ -59,45 +63,37 @@ public class WebSecurityConfiguration {
      */
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-
         http
-
-                .csrf()
-                .disable()
-                .cors(Customizer.withDefaults())
+                .csrf().disable()
+                .cors(Customizer.withDefaults()) // Configure CORS before authorization
                 .authorizeHttpRequests()
-                .requestMatchers("/api/v1/user/test/**")
-                .permitAll()
-//                .requestMatchers("/api/v1/user/test/**")
-//                .permitAll()
-//                .requestMatchers(HttpMethod.POST).permitAll()
-//                .requestMatchers(HttpMethod.GET).permitAll()
-//                .requestMatchers(HttpMethod.PUT).permitAll()
-//                .requestMatchers(HttpMethod.DELETE).permitAll()
-                .requestMatchers("/api/v1/auth/**")
-                .permitAll().anyRequest().authenticated()
+                .requestMatchers("/api/v1/auth/**").permitAll() // Paths that are accessible without authentication
+                .requestMatchers("/api/v1/user/**").authenticated() // Paths that require authentication
+                .anyRequest().authenticated() // Default: All other paths require authentication
                 .and()
-                .sessionManagement()
-                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 .and()
-                .exceptionHandling()
-                .authenticationEntryPoint(restAuthenticationEntryPoint).and()
+                .exceptionHandling().authenticationEntryPoint(restAuthenticationEntryPoint)
+                .and()
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
                 .logout()
                 .logoutUrl("/api/v1/auth/logout")
                 .addLogoutHandler(logoutHandler)
                 .logoutSuccessHandler((request, response, authentication) -> SecurityContextHolder.clearContext());
-        return http.build();
+
+        return http.build(); // Return FilterChainProxy, not HttpSecurity
     }
 
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
-        configuration.setAllowedMethods(Arrays.asList("GET","POST", "PUT", "PATCH", "DELETE"));
-        configuration.setAllowedHeaders(List.of("Authorization"));
+        configuration.setAllowedOrigins(Arrays.asList(corsUrl));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type")); // Add Content-Type header
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Custom-Header"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
+
 }
